# SoulWorker_bot

./: Ar_words.txt  Catherine01.py  Dockerfile  Procfile  keep.py  main.py  procfile  pyproject.toml  requirements  requirements.txt  requires
cogs/: cog1.py  cog10.py  cog11.py  cog12.py  cog13.py  cog2.py  cog3.py  cog4.py  cog5.py  cog8.py  cog9.py  hangman.py
cogs/chatbotTemplate/: chatbot.py  chatbottemplate.template
