[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool]
[tool.poetry]
authors = ["Amd TheWise <you@example.com>"]
description = ""
name = "Catherine"
version = "2.1"

[tool.poetry.dependencies]
Cython = "^0.29.27"
Flask = "^2.0.3"
PyNaCl = "^1.5.0"
animec = "^0.4"
bs4 = "^0.0.1"
discord = "^2.2.3"
"discord.py" = "^2.0.1"
docx = "^0.2.4"
google-trans-new = "^1.1.9"
httpcore = "^0.14.7"
httpx = "^0.22.0"
python = "^3.8"
replit = "^3.2.4"
wikipedia = "^1.4.0"
wolframalpha = "^5.0.0"
worldmeter = "^0.2.1"
requests = "2.31.0"
ffmpeg = "1.4"
pypi-libavwrapper = "0.0.1"
discord-ext-music = "0.3.0"
yt-dlp = "2023.7.6"
av = "10.0.0"

[tool.poetry.dev-dependencies]
debugpy = "^1.6.2"
replit-python-lsp-server = {extras = ["yapf", "rope", "pyflakes"], version = "^1.5.9"}
urllib3 = "1.26.15"
